--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customersearchresult.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/customer/customersearchresult.xhtml
@@ -42,7 +42,7 @@
                     <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
                                      rows="20">
                         <b:cell x="1" y="1">
-                            <pretty:link mappingId="customermain" title="Zurück">
+                            <pretty:link mappingId="customermain" title="Zurück" id="customermain">
                                 <f:param value="#{customerBackingBean.data.currentEntityId}"/>
                                 <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
                             </pretty:link>
@@ -60,7 +60,7 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <pretty:link mappingId="customermain" title="Datensatz anzeigen">
+                        <pretty:link mappingId="customermain" title="Datensatz anzeigen" id="jumptocustomer">
                             <f:param value="#{row.ID}"/>
                             <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
                         </pretty:link>
