--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancersimilar.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancersimilar.xhtml
@@ -40,7 +40,7 @@
                     <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
                                      rows="20">
                         <b:cell x="1" y="1">
-                            <pretty:link mappingId="freelancermain" title="Zurück">
+                            <pretty:link mappingId="freelancermain" title="Zurück" id="freelancermain">
                                 <f:param value="#{freelancerBackingBean.data.currentEntityId}"/>
                                 <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
                             </pretty:link>
@@ -59,14 +59,14 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <pretty:link mappingId="freelancermain" title="Springe zur Freiberufler - Ansicht">
+                        <pretty:link mappingId="freelancermain" title="Springe zur Freiberufler - Ansicht" id="freelancerlink">
                             <f:param value="#{row.freelancer.id}"/>
                             <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
                         </pretty:link>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Name1" action="#{profileBackingBean.commandSortByName1}"/>
+                            <h:outputText value="Name1"/>
                         </f:facet>
                         <h:outputText value="#{row.freelancer.name1}"
                                       styleClass="#{row.freelancer.contactforbidden?'kontaktsperre':''}"/>
@@ -80,26 +80,26 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Name2" action="#{profileBackingBean.commandSortByName2}"/>
+                            <h:outputText value="Name2"/>
                         </f:facet>
                         <h:outputText value="#{row.freelancer.name2}"
                                       styleClass="#{row.freelancer.contactforbidden?'kontaktsperre':''}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Plz" action="#{profileBackingBean.commandSortByPLZ}"/>
+                            <h:outputText value="Plz"/>
                         </f:facet>
                         <h:outputText value="#{row.freelancer.plz}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Satz" action="#{profileBackingBean.commandSortBySatz}"/>
+                            <h:outputText value="Satz"/>
                         </f:facet>
                         <h:outputText value="#{row.freelancer.stundensatz}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Verf." action="#{profileBackingBean.commandSortByVerf}"/>
+                            <h:outputText value="Verf."/>
                         </f:facet>
                         <h:outputText value="#{row.freelancer.availability}">
                             <f:converter converterId="dateConverter"/>
@@ -107,7 +107,7 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <a4j:commandLink value="Code" action="#{profileBackingBean.commandSortByCode}"/>
+                            <h:outputText value="Code"/>
                         </f:facet>
                         <h:outputText value="#{row.code}"/>
                     </h:column>
