--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnerhistory.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnerhistory.xhtml
@@ -71,12 +71,11 @@
                     <h:column>
                         <f:facet name="header">
                         </f:facet>
-                        <b:commandLink title="Eintrag löschen" immediate="true"
-                                       action="#{partnerBackingBean.commandDeleteHistoryEntry}">
+                        <h:commandLink title="Eintrag löschen" immediate="true"
+                                       action="#{partnerBackingBean.commandDeleteHistoryEntry}"
+                                       id="deletehistoryentry">
                             <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
-                            <a4j:support eventsQueue="powerstaff" event="onclick"
-                                         reRender="history"/>
-                        </b:commandLink>
+                        </h:commandLink>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
