--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmenu1.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/project/projectmenu1.xhtml
@@ -11,7 +11,7 @@
 
         <b:cell x="1" y="3">
             <f:subview id="similarlink" rendered="#{!empty projectBackingBean.data.entity.id}">
-                <pretty:link mappingId="projectsimilar" styleClass="menuitem">
+                <pretty:link mappingId="projectsimilar" styleClass="menuitem" id="projectsimilar">
                     <f:param value="#{projectBackingBean.data.currentType}"/>
                     <f:param value="#{projectBackingBean.data.currentTypeId}"/>
                     <f:param value="#{projectBackingBean.data.currentEntityId}"/>
